# ytdl-rmcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  gemini-extension.json  pyproject.toml  release-please-config.json  ytdl-mcp-gateway.sh
.claude-plugin/: plugin.json
.full-review/: 00-scope.md  02-security-performance.md  04-best-practices.md  05-final-report.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  container.yml  openwiki-update.yml  release-please.yml  release.yml
assets/: ext-apps-vendored.js  youtube-search-app.html  youtube-search-app.js
docs/: container.md  musicbrainz-acoustid.md
docs/sessions/: 2026-06-11-youtube-search-mcp-ui.md  2026-06-12-container-metadata-autoretag.md  2026-06-12-ytdl-metadata-plex-playlist.md  2026-06-13-mcpb-release-mcporter-build.md  2026-07-10-labby-ytdl-ssh-alias.md  2026-07-10-rmcp-release-builds.md  2026-07-11-ytdl-target-path-main-merge.md  2026-07-11-ytdl-target-path-transfer.md  2026-07-12-plex-playlist-transfer-drain.md
docs/superpowers/plans/: 2026-06-11-youtube-search-mcp-ui.md
hooks/: hooks.json
mcpb/: manifest.json
openwiki/: .last-update.json  index.md  quickstart.md
openwiki/architecture/: index.md  overview.md
openwiki/development/: build-test.md  index.md
openwiki/operations/: container.md  index.md  setup.md
openwiki/workflows/: download-flow.md  index.md
scripts/: build-mcpb.sh  check-packaging.sh  fetch-binary.sh  install.sh  run-server.sh  setup-venv.sh
skills/ytdl/: SKILL.md
src/: bootstrap.rs  bootstrap_tests.rs  config.rs  config_tests.rs  doctor.rs  downloader.rs  downloader_tests.rs  history.rs  history_tests.rs  identify.rs  main.rs  mcp.rs  mcp_tests.rs  model.rs  model_tests.rs  plex.rs  plex_tests.rs  search_app.rs  search_app_tests.rs  service.rs  service_tests.rs  setup.rs  setup_tests.rs  transfer.rs  transfer_queue.rs  transfer_queue_tests.rs  transfer_tests.rs  urls.rs  urls_tests.rs  util.rs
src/bootstrap/: ffmpeg.rs  http.rs  ytdlp.rs
src/history/: candidates.rs
src/plex/: playlist.rs
src/service/: format.rs  render_tests.rs  stats_identify_tests.rs
src/youtube_dl_mcp/: __init__.py  config.py  downloader.py  models.py  server.py  transfer.py  updater.py
