[project]
name = "youtube-dl-mcp"
version = "0.3.0"
description = "MCP server that downloads media with yt-dlp and rsyncs it to an SSH remote."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.27",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
youtube-dl-mcp = "youtube_dl_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_dl_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
